# RunMetrics-Visualizer

./: .devcontainer.json  .gitignore  CONTRIBUTING.md  README.md  plot.py  pyproject.toml  requirements.txt  runtimes.csv  timing.py
data/: first_test.csv  second_test.csv
examples/: prototype.py
src/: helpers.py  module.py  timer.py  user_interface.py
src/runmetrics-visualizer/: user_interface.py
src/runmetricsvisualizer/: __init__.py  plot.py  runmetrics.py  timer.py  user_interface.py
testing/other/: dummy.py  test.py
tests/: plotting_test.py  runtime_test.py
tests/other/: dummy.py  test.py
tests/playground/: dummy.py
