[tool.poetry]
name = "runmetrics_visualizer"
version = "3.1.1"
description = "A package for storing function runtime data and graphing it via GUI!"
authors = ["Rahul Vikram"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.dev-dependencies]
matplotlib = "^3.8.2"
pandas = "^2.1.4"
pillow = "^10.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
